# opentelemetry-demo

./: .env  .licenserc.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README_GCP.md  cloudbuild-deploy.yaml  gcp-config-values.yml  package-lock.json  package.json
.github/: CODEOWNERS
.github/workflows/: build-images.yml  checks.yml  component-build-images.yml  gradle-wrapper-validation.yml  label-pr.yml  stale.yml
gcp/: deploy.sh  helmfile.yaml  opentelemetry-demo-auth-extension.yaml.gotmpl  opentelemetry-demo-cicd.yaml.gotmpl  opentelemetry-demo-collector-image.yaml.gotmpl  opentelemetry-demo-features.yaml.gotmpl  opentelemetry-demo-values.yaml  opentelemetry-demo-workload-identity.yaml.gotmpl
kubernetes/: opentelemetry-demo.yaml  service-directory-registration.yaml
src/accountingservice/: AccountingService.csproj  Dockerfile  go.mod  go.sum
src/adservice/: build.gradle
src/cartservice/src/: Dockerfile  cartservice.csproj
src/cartservice/tests/: cartservice.tests.csproj
src/checkoutservice/: Dockerfile  go.mod  go.sum
src/currencyservice/: Dockerfile
src/emailservice/: Dockerfile  Gemfile
src/featureflagservice/: mix.exs
src/ffspostgres/: Dockerfile
src/frauddetectionservice/: build.gradle.kts
src/frontend/: Dockerfile  package-lock.json  package.json
src/imageprovider/: Dockerfile
src/kafka/: Dockerfile
src/loadgenerator/: requirements.txt
src/otelcollector/: otelcol-config-extras.yml
src/paymentservice/: package-lock.json  package.json
src/productcatalogservice/: Dockerfile  go.mod  go.sum
src/quoteservice/: composer.json
src/recommendationservice/: requirements.txt
src/shippingservice/: Cargo.toml  Dockerfile
test/: Dockerfile  package-lock.json  package.json
test/tracetesting/: Dockerfile
