

[package]
name = "shippingservice"
version = "1.8.0"
edition = "2021"

[[bin]]
name = "shippingservice"
path = "src/main.rs"

[features]
dockerproto = [] # compile in docker or not

[dependencies]
tonic = "0.12"
tonic-health = "0.12.0"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"]}
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry-http = "0.13.0"
opentelemetry-otlp = { version = "0.17.0", features = ["tonic"] }
log = "0.4.21"
simplelog = "0.12"
reqwest-middleware = "0.3.0"
reqwest-tracing = { version = "0.5.0", features = ["opentelemetry_0_22"] }
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-opentelemetry = "0.25.0"
tracing-subscriber = "0.3"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.12"
